--- a/playbooks/roles/creategroups/tasks/vault.yml
+++ b/playbooks/roles/creategroups/tasks/vault.yml
@@ -3,7 +3,7 @@
 - name: Create 'vault' security group
   local_action:
      module: ec2_group
-     name: "{{tag_prefix}}vault"
+     name: "{{tag_prefix}}{{vault_name}}"
      description: "LDAP and SQL Databases"
      region: "{{aws_region}}"
      rules:
@@ -11,11 +11,11 @@
          type: ssh
          from_port: 22
          to_port: 22
-         group_name: "{{tag_prefix}}kitchen-door"
+         group_name: "{{tag_prefix}}{{kitchen_door_name}}"
        - proto: tcp
          from_port: 5432
          to_port: 5432
-         group_name: "{{tag_prefix}}castle-gate"
+         group_name: "{{tag_prefix}}{{castle_gate_name}}"
      rules_egress:
        - proto: all
          type: all
