--- a/playbooks/roles/creategroups/tasks/watch-tower.yml
+++ b/playbooks/roles/creategroups/tasks/watch-tower.yml
@@ -3,7 +3,7 @@
 - name: Create 'watch-tower' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}watch-tower"
+    name: "{{tag_prefix}}{{watch_tower_name}}"
     description: "Email services"
     region: "{{aws_region}}"
     rules:
@@ -16,32 +16,32 @@
         type: ssh
         from_port: 22
         to_port: 22
-        group_name: "{{tag_prefix}}kitchen-door"
+        group_name: "{{tag_prefix}}{{kitchen_door_name}}"
       - proto: tcp
         type: ldap 
         from_port: 636 
         to_port: 636 
-        group_name: '{{tag_prefix}}castle-gate'
+        group_name: '{{tag_prefix}}{{castle_gate_name}}'
       - proto: tcp 
         type: ldap 
         from_port: 636 
         to_port: 636 
-        group_name: "{{tag_prefix}}kitchen-door"
+        group_name: "{{tag_prefix}}{{kitchen_door_name}}"
       - proto: tcp 
         type: ldap 
         from_port: 636 
         to_port: 636 
-        group_name: "{{tag_prefix}}vault"
+        group_name: "{{tag_prefix}}{{vault_name}}"
       - proto: tcp 
         type: ldap 
         from_port: 636 
         to_port: 636 
-        group_name: "{{tag_prefix}}courtyard"
+        group_name: "{{tag_prefix}}{{courtyard_name}}"
       - proto: tcp 
         type: ldap 
         from_port: 636 
         to_port: 636 
-        group_name: "{{tag_prefix}}watch-tower"
+        group_name: "{{tag_prefix}}{{watch_tower_name}}"
     rules_egress:
       - proto: all
         type: all
