--- a/playbooks/roles/deleteiamroles/tasks/castle-gate.yml
+++ b/playbooks/roles/deleteiamroles/tasks/castle-gate.yml
@@ -2,17 +2,17 @@
 - name: Remove 'castle-gate' role from instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}castle-gate-profile --role-name {{tag_prefix}}castle-gate
+      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{castle_gate_name}}-profile --role-name {{tag_prefix}}{{castle_gate_name}}
 
 - name: Delete 'castle-gate' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}castle-gate
+      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{castle_gate_name}}
 
 - name: Delete 'castle-gate' instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}castle-gate-profile
+      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{castle_gate_name}}-profile
 
 
 
