--- a/playbooks/roles/creategroups/tasks/courtyard.yml
+++ b/playbooks/roles/creategroups/tasks/courtyard.yml
@@ -3,7 +3,7 @@
 - name: Create 'courtyard' security group
   local_action:
       module: ec2_group
-      name: "{{tag_prefix}}courtyard"
+      name: "{{tag_prefix}}{{courtyard_name}}"
       description: "Transient workers"
       region: "{{aws_region}}"
       rules:
@@ -11,12 +11,12 @@
           type: ssh
           from_port: 22
           to_port: 22
-          group_name: "{{tag_prefix}}kitchen-door"
+          group_name: "{{tag_prefix}}{{kitchen_door_name}}"
         - proto: tcp
           type: http
           from_port: 80
           to_port: 80
-          src_group_name: "{{tag_prefix}}castle-gate"
+          src_group_name: "{{tag_prefix}}{{castle_gate_name}}"
       rules_egress:
         - proto: all
           type: all
