--- a/playbooks/roles/deletegroups/tasks/castle-gate.yml
+++ b/playbooks/roles/deletegroups/tasks/castle-gate.yml
@@ -2,7 +2,7 @@
 - name: Delete 'castle-gate' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}castle-gate"
+    name: "{{tag_prefix}}{{castle_gate_name}}"
     description: "Web facing services"
     region: "{{aws_region}}"
     state: absent
