--- a/playbooks/roles/deletegroups/tasks/kitchen-door.yml
+++ b/playbooks/roles/deletegroups/tasks/kitchen-door.yml
@@ -2,7 +2,7 @@
 - name: Delete 'kitchen-entrance' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}kitchen-door"
+    name: "{{tag_prefix}}{{kitchen_door_name}}"
     description: "Monitoring services"
     region: "{{aws_region}}"
     state: absent
