--- a/playbooks/roles/deletegroups/tasks/watch-tower.yml
+++ b/playbooks/roles/deletegroups/tasks/watch-tower.yml
@@ -2,7 +2,7 @@
 - name: Delete 'watch-tower' security group
   local_action:
     module: ec2_group
-    name: "{{tag_prefix}}watch-tower"
+    name: "{{tag_prefix}}{{watch_tower_name}}"
     description: "Email services"
     region: "{{aws_region}}"
     state: absent
