--- a/playbooks/roles/deleteiamroles/tasks/kitchen-door.yml
+++ b/playbooks/roles/deleteiamroles/tasks/kitchen-door.yml
@@ -2,15 +2,15 @@
 - name: Remove 'kitchen-door' role from instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}kitchen-door-profile --role-name {{tag_prefix}}kitchen-door
+      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{kitchen_door_name}}-profile --role-name {{tag_prefix}}{{kitchen_door_name}}
 
 - name: Delete 'kitchen-door' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}kitchen-door
+      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{kitchen_door_name}}
 
 - name: Delete 'kitchen-door' Instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}kitchen-door-profile
+      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{kitchen_door_name}}-profile
 
