--- a/playbooks/roles/deleteiamroles/tasks/vault.yml
+++ b/playbooks/roles/deleteiamroles/tasks/vault.yml
@@ -2,15 +2,15 @@
 - name: Remove 'vault' role from instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}vault-profile --role-name {{tag_prefix}}vault
+      aws --region {{aws_region}} iam remove-role-from-instance-profile --instance-profile-name {{tag_prefix}}{{vault_name}}-profile --role-name {{tag_prefix}}{{vault_name}}
 
 - name: Delete 'vault' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}vault
+      aws --region {{aws_region}} iam delete-role --role-name {{tag_prefix}}{{vault_name}}
 
 - name: Delete 'vault' Instance profile
   local_action:
     module: command
-      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}vault-profile
+      aws --region {{aws_region}} iam delete-instance-profile --instance-profile-name {{tag_prefix}}{{vault_name}}-profile
 
