Instances creation and configuration with cloud-init

--- a/playbooks/roles/createinstances/tasks/castle-gate.yml
+++ b/playbooks/roles/createinstances/tasks/castle-gate.yml
@@ -13,6 +13,7 @@
         volume_size: 8
         delete_on_termination: true
     wait: yes
+    user_data: "{{ lookup('file', 'castle-gate-cloud-init-script.sh') }}"
     instance_tags:
       prefix: "{{ tag_prefix }}archi"
   register: front_end_servers
