--- a/playbooks/roles/createinstances/tasks/courtyard.yml
+++ b/playbooks/roles/createinstances/tasks/courtyard.yml
@@ -10,8 +10,12 @@
     volumes:
       - device_name: /dev/sda1
         device_type: io1
+        iops: 100
         volume_size: 8
         delete_on_termination: true
     wait: yes
+    user_data: "{{ lookup('file', 'courtyard-cloud-init-script.sh') }}"
+    instance_tags:
+      prefix: "{{ tag_prefix }}archi"
   register: workers_ec2
 - debug: msg="{{workers_ec2}}"
