--- a/playbooks/aws-delete-instances.yml
+++ b/playbooks/aws-delete-instances.yml
@@ -4,14 +4,10 @@
 # USE WITH CARE!
 
 - name: Delete devel EC2 instances
-  hosts: security_group_kitchen_door
+#  hosts: security_group_kitchen_door
+  hosts: localhost
   connection: local
   gather_facts: False
-  tasks:
-  - name: Terminate {{ec2_id}} instance in {{aws_region}}
-    local_action:
-        module: ec2
-        state: 'absent'
-        region: '{{aws_region}}'
-        instance_ids: '{{ec2_id}}'
 
+  roles:
+   - deleteinstances
