--- a/playbooks/roles/createinstances/tasks/main.yml
+++ b/playbooks/roles/createinstances/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include: deployutils.yml
+# include: update-default-vpc.yml
 - include: vault.yml
 - include: castle-gate.yml
 - include: courtyard.yml
