--- a/playbooks/roles/createinstances/tasks/main.yml
+++ b/playbooks/roles/createinstances/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# include: update-default-vpc.yml
+- include: dns-config-ready.yml
 - include: vault.yml
 - include: castle-gate.yml
 - include: courtyard.yml
