--- a/playbooks/roles/createinstances/tasks/vault.yml
+++ b/playbooks/roles/createinstances/tasks/vault.yml
@@ -29,3 +29,20 @@
     volume_size: 20
     volume_type: gp2
 
+- name: set private_ip 
+  set_fact: 
+    private_ip: "{{item.private_ip}}"
+  with_items: db_server.instances
+
+
+- name: Update template file
+  local_action: 
+    module: copy
+    content: "{{ lookup('template', '../templates/db-change-record-set.j2')}}"
+    dest: ./db-change-record-set.json
+    
+
+- name: Registration of vault in DNS
+  local_action:
+    module: command
+      aws route53 change-resource-record-sets --hosted-zone-id "{{hosted_zone_id}}" --change-batch file://db-change-record-set.json
