--- a/playbooks/roles/createinstances/tasks/courtyard.yml
+++ b/playbooks/roles/createinstances/tasks/courtyard.yml
@@ -17,5 +17,22 @@
     user_data: "{{ lookup('template', '../templates/courtyard-cloud-init-script.j2') }}"
     instance_tags:
       prefix: "{{ tag_prefix }}archi"
-  register: workers_ec2
-- debug: msg="{{workers_ec2}}"
+  register: workers
+
+- name: set private_ip 
+  set_fact: 
+    private_ip: "{{item.private_ip}}"
+  with_items: workers.instances
+
+
+- name: Update template file
+  local_action: 
+    module: copy
+    content: "{{ lookup('template', '../templates/worker-change-record-set.j2')}}"
+    dest: ./worker-change-record-set.json
+    
+
+- name: Registration of courtyard in DNS
+  local_action:
+    module: command
+      aws route53 change-resource-record-sets --hosted-zone-id "{{hosted_zone_id}}" --change-batch file://worker-change-record-set.json
