--- a/playbooks/roles/createinstances/tasks/kitchen-door.yml
+++ b/playbooks/roles/createinstances/tasks/kitchen-door.yml
@@ -17,4 +17,21 @@
     instance_tags:
       prefix: "{{ tag_prefix }}archi"
   register: devel_servers
-- debug: msg="{{devel_servers}}"
+
+- name: set private_ip 
+  set_fact: 
+    private_ip: "{{item.private_ip}}"
+  with_items: devel_servers.instances
+
+
+- name: Update template file
+  local_action: 
+    module: copy
+    content: "{{ lookup('template', '../templates/dev-change-record-set.j2')}}"
+    dest: ./dev-change-record-set.json
+    
+
+- name: Registration of kitchen-door in DNS
+  local_action:
+    module: command
+      aws route53 change-resource-record-sets --hosted-zone-id "{{hosted_zone_id}}" --change-batch file://dev-change-record-set.json
