Validate s3 bucket policy

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *~
 playbooks/group_vars/all
 playbooks/db-change-record-set.json
+playbooks/roles/creategroups/files/s3-policy.json
+playbooks/s3-policy.json
