--- a/playbooks/roles/creategroups/tasks/courtyard.yml
+++ b/playbooks/roles/creategroups/tasks/courtyard.yml
@@ -4,6 +4,7 @@
   local_action:
       module: ec2_group
       name: "{{tag_prefix}}{{courtyard_name}}"
+      vpc_id: "{{vpc_id}}"
       description: "Transient workers"
       region: "{{aws_region}}"
       rules:
@@ -17,7 +18,6 @@
           from_port: 80
           to_port: 80
           src_group_name: "{{tag_prefix}}{{castle_gate_name}}"
-      rules_egress:
         - proto: all
           type: all
           cidr_ip: 0.0.0.0/0
