--- a/playbooks/roles/creategroups/tasks/kitchen-door.yml
+++ b/playbooks/roles/creategroups/tasks/kitchen-door.yml
@@ -5,6 +5,7 @@
   local_action:
     module: ec2_group
     name: "{{tag_prefix}}{{kitchen_door_name}}"
+    vpc_id: "{{vpc_id}}"
     description: "Monitoring services"
     region: "{{aws_region}}"
     rules:
@@ -13,7 +14,6 @@
         from_port: 22
         to_port: 22
         cidr_ip: 0.0.0.0/0
-    rules_egress:
       - proto: all
         type: all
         cidr_ip: 0.0.0.0/0
