--- a/playbooks/roles/creategroups/tasks/vault.yml
+++ b/playbooks/roles/creategroups/tasks/vault.yml
@@ -4,6 +4,7 @@
   local_action:
      module: ec2_group
      name: "{{tag_prefix}}{{vault_name}}"
+     vpc_id: "{{vpc_id}}"
      description: "LDAP and SQL Databases"
      region: "{{aws_region}}"
      rules:
@@ -16,7 +17,6 @@
          from_port: 5432
          to_port: 5432
          group_name: "{{tag_prefix}}{{castle_gate_name}}"
-     rules_egress:
        - proto: all
          type: all
          cidr_ip: 0.0.0.0/0
