--- a/playbooks/roles/creategroups/tasks/deployutils.yml
+++ b/playbooks/roles/creategroups/tasks/deployutils.yml
@@ -2,29 +2,27 @@
 # Creation of S3 bucket deployutils
 - name: Create deployutils S3 bucket
   local_action:
-    module: s3
-    bucket: '{{tag_prefix}}deployutils'
-    mode: create
-    object: '/identities/dbs.internal/etc/pki/tls/certs'
-#    profile: 'file://s3-policy.json'
-    region: '{{aws_region}}'
+    module: command
+      aws s3 mb s3://"{{tag_prefix}}deployutils"
 
-# PUT crt file
+- name: Update template file
+  local_action:
+    module: copy
+    content: "{{ lookup('template', '../files/s3-policy.j2')}}"
+    dest: ./s3-policy.json
+
+- name: Put s3 bucket policy file
+  local_action:
+    module: command
+      aws s3api put-bucket-policy --policy "file://s3-policy.json" --bucket "{{tag_prefix}}deployutils"
+
 - name: Put cert file
   local_action:
-    module: s3
-    bucket: '{{tag_prefix}}deployutils'
-    mode: put
-    region: '{{aws_region}}'
-    object: '/identities/dbs.internal/etc/pki/tls/certs/dbs.internal.crt'
-    src: '{{identities_dir}}/dbs.internal/etc/pki/tls/certs/dbs.internal.crt'
+    module: command
+      aws s3api put-object --bucket "{{tag_prefix}}deployutils" --key 'identities/dbs.internal/etc/pki/tls/certs/dbs.internal.crt' --body '{{identities_dir}}/etc/pki/tls/certs/dbs.internal.crt' --server-side-encryption "AES256"
 
 # PUT crt file
-- name: Put cert file
+- name: Put private cert file
   local_action:
-    module: s3
-    bucket: '{{tag_prefix}}deployutils'
-    mode: put
-    region: '{{aws_region}}'
-    object: '/identities/dbs.internal/etc/pki/tls/private/dbs.internal.key'
-    src: '{{identities_dir}}/dbs.internal/etc/pki/tls/private/dbs.internal.key'
+    module: command
+      aws s3api put-object --bucket "{{tag_prefix}}deployutils" --key 'identities/dbs.internal/etc/pki/tls/private/dbs.internal.key' --body '{{identities_dir}}/etc/pki/tls/private/dbs.internal.key' --server-side-encryption "AES256"
