--- a/playbooks/roles/createiamroles/tasks/vault.yml
+++ b/playbooks/roles/createiamroles/tasks/vault.yml
@@ -2,7 +2,7 @@
 - name: Create 'vault' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam create-role --role-name {{tag_prefix}}{{vault_name}} --assume-role-policy-document "file://assume-role-policy.json"
+      aws --region {{aws_region}} iam create-role --role-name {{tag_prefix}}{{vault_name}} --assume-role-policy-document "file://roles/createiamroles/files/assume-role-policy.json"
 
 - name: Create 'vault' instance profile
   local_action:
