--- a/playbooks/roles/creategroups/tasks/kitchen-door.yml
+++ b/playbooks/roles/creategroups/tasks/kitchen-door.yml
@@ -14,6 +14,7 @@
         from_port: 22
         to_port: 22
         cidr_ip: 0.0.0.0/0
+    rules_egress:
       - proto: all
         type: all
         cidr_ip: 0.0.0.0/0
