--- a/playbooks/roles/creategroups/tasks/watch-tower.yml
+++ b/playbooks/roles/creategroups/tasks/watch-tower.yml
@@ -18,31 +18,7 @@
         from_port: 22
         to_port: 22
         group_name: "{{tag_prefix}}{{kitchen_door_name}}"
-      - proto: tcp
-        type: ldap 
-        from_port: 636 
-        to_port: 636 
-        group_name: '{{tag_prefix}}{{castle_gate_name}}'
-      - proto: tcp 
-        type: ldap 
-        from_port: 636 
-        to_port: 636 
-        group_name: "{{tag_prefix}}{{kitchen_door_name}}"
-      - proto: tcp 
-        type: ldap 
-        from_port: 636 
-        to_port: 636 
-        group_name: "{{tag_prefix}}{{vault_name}}"
-      - proto: tcp 
-        type: ldap 
-        from_port: 636 
-        to_port: 636 
-        group_name: "{{tag_prefix}}{{courtyard_name}}"
-      - proto: tcp 
-        type: ldap 
-        from_port: 636 
-        to_port: 636 
-        group_name: "{{tag_prefix}}{{watch_tower_name}}"
+    rules_egress:
       - proto: all
         type: all
         cidr_ip: 0.0.0.0/0
