--- a/playbooks/roles/createiamroles/tasks/kitchen-door.yml
+++ b/playbooks/roles/createiamroles/tasks/kitchen-door.yml
@@ -2,7 +2,7 @@
 - name: Create 'kitchen-door' role
   local_action:
     module: command
-      aws --region {{aws_region}} iam create-role --role-name {{tag_prefix}}{{kitchen_door_name}} --assume-role-policy-document "file://assume-role-policy.json"
+      aws --region {{aws_region}} iam create-role --role-name {{tag_prefix}}{{kitchen_door_name}} --assume-role-policy-document "file://roles/createiamroles/files/assume-role-policy.json"
 
 - name: Create 'Kitchen-door' instance profile
   local_action:
